--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Businesscards</title>
+  <title>Business Cards</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
